Sistema listo
Se unieron todos los script para que trabajen CORRECTAMENTE en conjunto